--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,10 +126,16 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="scoreView"
+            android:text="ScoreViewActivity"
+            android:textAllCaps="false"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:onClick="sportView"
             android:text="SportViewActivity"
             android:textAllCaps="false"/>
-
 
 
     </LinearLayout>
