--- a/app/src/main/res/layout/activity_sport_view.xml
+++ b/app/src/main/res/layout/activity_sport_view.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
 
-    tools:context="com.dingyong.view.SportViewActivity">
+    tools:context=".ScoreViewActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
